--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@1,700&display=swap" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="assets/css/main.css">
 <title>pow ptrol</title>    
@@ -13,7 +19,7 @@
 <div class="col-md-1"></div>    
 <div class="col-md-10">
 <header>
-<h1><em><strong>about paw patrol</strong></em></h1>    
+<h1><em><strong>About paw patrol</strong></em></h1>    
 </header>    
 </div>    
 <div class="col-md-1"></div>    
